--- a/ts-config.prod.json
+++ b/ts-config.prod.json
@@ -8,7 +8,7 @@
   "compilerOptions": {
     "module": "ES6",                     
     "strict": true,                           
-    "outDir": "./web/js/",
+    "outDir": "./tsc-output",
     "esModuleInterop": true,                  
     "skipLibCheck": true,                     
     "forceConsistentCasingInFileNames": true 
