--- a/ts-config.prod.json
+++ b/ts-config.prod.json
@@ -7,6 +7,7 @@
   ],
   "compilerOptions": {
     "module": "ES6",                     
+    "target": "ES2020",
     "strict": true,                           
     "outDir": "./tsc-output",
     "esModuleInterop": true,                  
