--- a/ts-config.prod.json
+++ b/ts-config.prod.json
@@ -9,7 +9,7 @@
     "module": "ES6",                     
     "target": "ES2020",
     "strict": true,                           
-    "outDir": "./tsc-output",
+    "outDir": "./dist",
     "esModuleInterop": true,                  
     "skipLibCheck": true,                     
     "forceConsistentCasingInFileNames": true 
