--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "animated-slide-in-background",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "dist/main.js",
   "type": "module",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "clean-test": "rm -rf ./dist",
     "clean-build": "rm -rf ./dist",
