--- a/package.json
+++ b/package.json
@@ -3,18 +3,21 @@
   "version": "1.0.5",
   "description": "",
   "main": "dist/main.js",
-  "type": "module",
   "files": [
     "dist"
   ],
   "scripts": {
+    "webpack": "webpack --config webpack.config.js",
     "clean-test": "rm -rf ./dist",
     "clean-build": "rm -rf ./dist",
+    "minify": "java -jar closure-compiler-v20200927.jar --generate_exports --js_output_file=umd/animated-slide-in-background.minify.js 'dist/**.js'",
     "tsc-test": "tsc -p ./ts-config.test.json",
     "tsc-prod": "tsc -p ./ts-config.prod.json",
     "dev": "tsc",
     "test": "npm run clean-test && npm run tsc-test && jest ./test-dir && npm run clean-test",
-    "build": "npm run clean-build && npm run tsc-prod"
+    "build": "npm run clean-build && npm run tsc-prod && npm run minify",
+    "foo": "java -jar closure-compiler-v20200927.jar  --isolation_mode IIFE --js_output_file=foo.js --js foo-src/**.js",
+    "help": "java -jar closure-compiler-v20200927.jar --help"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +25,10 @@
     "@types/jest": "^26.0.14"
   },
   "devDependencies": {
-    "jest": "^26.4.2"
+    "jest": "^26.4.2",
+    "ts-loader": "^8.0.4",
+    "typescript": "^4.0.3",
+    "webpack": "^5.0.0",
+    "webpack-cli": "^4.0.0"
   }
 }
