--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,10 @@
 {
-  "exclude": [
-    "**/*.spec.ts"
-  ],
-  "include": [
-    "./src/**/*.ts"
-  ],
   "compilerOptions": {
-    "module": "ES6",                     
-    "strict": true,                           
-    "outDir": "./web/js/",
-    "esModuleInterop": true,                  
-    "skipLibCheck": true,                     
-    "forceConsistentCasingInFileNames": true 
+    "outDir": "./dist/",
+    "noImplicitAny": true,
+    "module": "es6",
+    "target": "es5",
+    "jsx": "react",
+    "allowJs": true
   }
 }
