adding repository to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "animated-slide-in-background",
   "version": "1.0.6",
   "description": "",
+  "repository": "github:Richardinho/animated-slide-in-background",
   "main": "dist/main.js",
   "files": [
     "dist"
